--- a/安卓开发/安卓开发日记.md
+++ b/安卓开发/安卓开发日记.md
@@ -12,7 +12,6 @@
 
 * 自己做两个项目并上架谷歌商城
   * 类似于githu提交记录去制作一个手机使用时间的说明，分为轻度，中度，重度
-  * 
 
 #### 3. 其他？
 
@@ -33,12 +32,6 @@
 |      |                        |             |        |      |            |
 |      |                        |             |        |      |            |
 |      |                        |             |        |      |            |
-
-
-
-
-
-
 
 # 总结（10大问题）
 
@@ -1200,4 +1193,14 @@ public class ChooseAreaFragment extends Fragment {
     }
 }
 ~~~
+
+# 安卓开发之路第七天（8.23）
+
+# 安卓开发之路第八天（8.24）
+
+# 安卓开发之路第九天（8.25）
+
+# 安卓开发之路第十天（8.26）
+
+# 安卓开发之路第十一天（8.27）
 
