--- a/专业课/专业课.md
+++ b/专业课/专业课.md
@@ -912,7 +912,7 @@ SSL中两个重要的概念是SSL会话和SSL连接，规约如下：
 
 本质区别：GET 只是一次 HTTP请求，POST 先发请求头再发请求体，实际上是两次请求。
 
-1. 从功能上讲，GET 一般用来从服务器上获取资源，POST 一般用来更新服务器上的资源；
+1. 从功能上讲，GET 一般用来从**服务器上获取资源**，POST 一般用来**更新服务器上的资源**；
 2. 从 REST 服务角度上说，GET 是幂等的，即读取同一个资源，总是得到相同的数据，而 POST 不是幂等的，因为每次请求对资源的改变并不是相同的；进一步地，GET 不会改变服务器上的资源，而 POST 会对服务器资源进行改变；
 3. 从请求参数形式上看，GET 请求的数据会附在 URL 之后，即将请求数据放置在 HTTP 报文的 请求头 中，以 ? 分割 URL 和传输数据，参数之间以 & 相连。特别地，如果数据是英文字母/数字，原样发送；否则，会将其编码为 application/x-www-form-urlencoded MIME 字符串(如果是空格，转换为+，如果是中文/其他字符，则直接把字符串用 BASE64 加密，得出如：%E4%BD%A0%E5%A5%BD，其中 ％XX 中的 XX 为该符号以 16 进制表示的 ASCII)；而 POST 请求会把提交的数据则放置在是 HTTP 请求报文的 请求体 中；
 4. 就安全性而言，POST 的安全性要比 GET 的安全性高，因为 GET 请求提交的数据将明文出现在 URL 上，而且 POST 请求参数则被包装到请求体中，相对更安全；
