--- a/专业课/专业课.md
+++ b/专业课/专业课.md
@@ -1223,7 +1223,7 @@ https://blog.csdn.net/historyasamirror/article/details/5778378
 > 一个进程之内可以分为一到多个线程。一个线程就是一个指令流，将指令流中的一条条指令以一定的顺序交给 CPU 执行Java 中，**线程作为最小调度单位，进程作为资源分配的最小单位**。 在 windows 中进程是不活动的，只是作为线程的容器。
 
 1. **操作系统中的一个“执行中的程序”就是进程，它是操作系统资源分配的最小的单位。而线程是进程的一个子集它是CPU调度和执行的最小单位**。
-2. 线程相对进程更轻量，特别是上下文切换，进程要比线程消耗更多的计算机资源。
+2. **线程相对进程更轻量，特别是上下文切换，进程要比线程消耗更多的计算机资源。**
    * **进程切换时**，涉及到当前进程的CPU环境的保存和新被调度运行进程的CPU环境的设置；
    * **线程切换时**，仅需要保存和设置少量的寄存器内容，不涉及存储管理方面的操作。
 
