--- a/编程总结/总结2.md
+++ b/编程总结/总结2.md
@@ -8567,7 +8567,46 @@ public class 从有序数组中随机取两个值 {
 }
 ~~~
 
-#### 
+## 【经典算法】
+
+#### 1. 单例模式
+
+**懒汉式**
+
+~~~java
+class Singleton{
+    private static volatile Singleton instance;
+    private Singleton(){};
+    public static Singleten getInstance(){
+        if(instacne!=null){
+            synchronized(Singleton.class){
+                if(instacne!=null){
+                    instance=new Singleton();
+                }
+            }
+        }
+    }
+}
+public class Singleton {
+    //私有静态初始化
+    private volatile static Singleton singleton;
+    
+    private Singleton(){};
+    
+    public static Singleton getSingleton(){
+        if(singleton == null){
+            synchronized(Singleton.class){
+                if(singleton == null){
+                    singleton = new Singleton();
+                }
+            }
+        }
+        return singleton;
+    } 
+}
+~~~
+
+
 
 # [LeetCode 56/100题](https://labuladong.gitbook.io/algo)（由简到易）
 
