--- a/编程总结/总结2.md
+++ b/编程总结/总结2.md
@@ -1,6 +1,60 @@
 [TOC]
 
-# [专题总结(共100题)](https://labuladong.gitbook.io/algo)
+# [专题总结(100题)](https://labuladong.gitbook.io/algo)
+
+## 【必会代码】
+
+### 一、树
+
+##### 1. 二叉树的遍历非递归
+
+##### 2. 二叉树的深度
+
+##### 3. 二叉树的路径和
+
+#### 二、链表
+
+##### 1. 翻转链表
+
+##### 2. 链表归并
+
+##### 3. 相交链表
+
+##### 4. 链表的环
+
+##### 5. 倒数结点
+
+#### 三、数组
+
+##### 1. 两数之和
+
+##### 2. 顺时针打印数组
+
+##### 3. 移动0
+
+#### 四、排序
+
+##### 1. 冒泡排序
+
+##### 2. 快速排序
+
+##### 3. 归并排序
+
+##### 4. 堆排序
+
+#### 五、字符串
+
+##### 1. 最长子串
+
+##### 2. 是否存在字符串的排列
+
+##### 3. 最长公共子串
+
+#### 五、动态规划
+
+#### 六、滑动窗口
+
+#### 七、DFS
 
 ## 【代码规范】
 
@@ -2982,77 +3036,45 @@ public class Solution {
 
 **思路**：
 
-* [所在网站](https://www.nowcoder.com/questionTerminal/fe6b651b66ae47d7acce78ffdd9a96c7?answerType=1&f=discussion)//https://blog.csdn.net/qq_33575542/article/details/80825221
+* 递归并且剪枝
 
 **代码（Java）**
 
 ```java
-/**
-     * 1、递归算法
-     *
-     * 解析：http://www.cnblogs.com/cxjchen/p/3932949.html  (感谢该文作者！)
-     *
-     * 对于无重复值的情况
-     *
-     * 固定第一个字符，递归取得首位后面的各种字符串组合；
-     * 再把第一个字符与后面每一个字符交换，并同样递归获得首位后面的字符串组合； *递归的出口，就是只剩一个字符的时候，递归的循环过程，就是从每个子串的第二个字符开始依次与第一个字符交换，然后继续处理子串。
-     *
-     * 假如有重复值呢？
-     * *由于全排列就是从第一个数字起，每个数分别与它后面的数字交换，我们先尝试加个这样的判断——如果一个数与后面的数字相同那么这两个数就不交换了。
-     * 例如abb，第一个数与后面两个数交换得bab，bba。然后abb中第二个数和第三个数相同，就不用交换了。
-     * 但是对bab，第二个数和第三个数不 同，则需要交换，得到bba。
-     * 由于这里的bba和开始第一个数与第三个数交换的结果相同了，因此这个方法不行。
-     *
-     * 换种思维，对abb，第一个数a与第二个数b交换得到bab，然后考虑第一个数与第三个数交换，此时由于第三个数等于第二个数，
-     * 所以第一个数就不再用与第三个数交换了。再考虑bab，它的第二个数与第三个数交换可以解决bba。此时全排列生成完毕！
-     *
-     *
-     * @param str
-     * @return
-     */
-package 字符串;
-
-import java.nio.charset.Charset;
 import java.util.*;
-
-/**
- * 输入一个字符串,按字典序打印出该字符串中字符的所有排列。
- * 例如输入字符串abc,则打印出由字符a,b,c所能排列出来的所有字符串abc,acb,bac,bca,cab和cba。
- * */
-public class 字符串的排列 {
-    public static void main(String[] args) {
-        String str="abb";
-        HashSet<String> charset=new HashSet<>();
-        if(str!=null&&str.length()>0){
-            helper(str.toCharArray(),charset,0);
-        }
-
-        Iterator<String> iterator = charset.iterator();//遍历器
-        while(iterator.hasNext())System.out.print(iterator.next()+" ");//判断是否有，有就输出
+public class Solution {
+    ArrayList<String> list =new ArrayList<>();
+    char[] c;
+    public ArrayList<String> Permutation(String str) {
+      // 记住此方法str.toCharArray()
+       c = str.toCharArray();
+       dfs(0);
+       return list;
     }
-    private static void helper (char []chars,HashSet<String> charset, int i){
-      //递归的出口，就是只剩一个字符的时候，递归的循环过程，就是从每个子串的第二个字符开始依次与第一个字符交换，然后继续处理子串。
-        // for循环和swap的含义：对于“ABC”，
-        // 第一次'A' 与 'A'交换，字符串为"ABC", pos为0， 相当于固定'A'
-        // 第二次'A' 与 'B'交换，字符串为"BAC", pos为0， 相当于固定'B'
-        // 第三次'A' 与 'C'交换，字符串为"CBA", pos为0， 相当于固定'C'
-        if(i==chars.length-1){
-          charset.add(String.valueOf(chars));
-      }else{
-            for(int j=i;j<chars.length;j++){
-                    swap(chars,i,j);
-                    helper(chars,charset,i+1);
-                    swap(chars,j,i);
-                }
-            }
-        }
-    private static void  swap(char[] cs,int i,int j){
-        char temp=cs[i];
-        cs[i]=cs[j];
-        cs[j]=temp;
+    private void dfs(int x){
+      if(x==c.length-1){
+          //记住此方法String.valueOf(c)，将数组转换为为字符串
+        list.add(String.valueOf(c));
+        return;
+      }
+      HashSet<Character> set = new HashSet<>();
+      for(int i=x;i<c.length;i++){
+       if(set.contains(c[i])) continue; // 重复，因此剪枝
+       set.add(c[i]);
+        swap(i,x);
+        dfs(x+1);
+        swap(i,x);
+        
+      }
+      
     }
+    private void swap(int a,int b){
+      char temp=c[a];
+      c[a]=c[b];
+      c[b]=temp;
+    }
+  
 }
-
 ```
 
 ####  3 左旋转字符串
@@ -3693,7 +3715,7 @@ public String longestPalindrome1(String s) {
     }
 ```
 
-动态规划：
+**动态规划：**
 
 https://leetcode-cn.com/problems/longest-palindromic-substring/solution/5-zui-chang-hui-wen-zi-chuan-dong-tai-gui-hua-jie-/
 
@@ -5488,8 +5510,6 @@ public class 面试 {
 }
 ~~~
 
-
-
 ## 【栈和队列】
 
 #### 1 用两个栈实现队列
@@ -5502,13 +5522,14 @@ public class 面试 {
 import java.util.Stack;
 
 public class Solution {
+    //负责装
     Stack<Integer> stack1 = new Stack<Integer>();
+    //负责出
     Stack<Integer> stack2 = new Stack<Integer>();
     //入队时，将stack2的值压入stack1 后，压stack1栈
     public void push(int node) {
         stack1.push(node);
     }    
-    
     //出队时，将stack1的值压入stack2 后，出stack2栈
     public int pop() {
         if(stack2.isEmpty()){
@@ -8803,9 +8824,7 @@ LRU缓存淘汰算法就是一种常用策略。LRU的全称是Least Recently Us
    public  int get(int key);
    ~~~
 
-   
-
-**1.  静态和非静态内部类的区别？**
+   **1.  静态和非静态内部类的区别？**
 
 静态内部类的作用：只是为了降低包的深度，方便类的使用，静态内部类适用于包含类当中，但又不依赖与外在的类，不用使用外在类的非静态属性和方法，只是为了方便管理类结构而定义。在创建静态内部类的时候，不需要外部类对象的引用。
 非静态内部类有一个很大的优点：可以自由使用外部类的所有变量和方法
@@ -8916,8 +8935,6 @@ public class LRUCache {
  * obj.put(key,value);
  */
 ~~~
-
-
 
 # [LeetCode 56/100题](https://labuladong.gitbook.io/algo)（由简到易）
 
